--- a/src/login/main.css
+++ b/src/login/main.css
@@ -68,6 +68,7 @@
 .kcHeaderClass {
   display: flex;
   justify-content: center;
+  width: 100%;
   background: transparent;
 }
 
@@ -76,6 +77,7 @@
   width: 100%;
   margin: 0 auto;
   padding: var(--kc-space-4) var(--kc-space-4);
+  box-sizing: border-box;
   background-color: var(--kc-header-background);
   color: var(--kc-primary);
   text-align: center;
@@ -92,6 +94,7 @@
   max-width: var(--kc-max-card-width);
   margin: 0 auto;
   padding: var(--kc-space-6) var(--kc-space-4);
+  box-sizing: border-box;
   display: block;
   position: relative;
     border-radius: 0 0 8px 8px;
