Add MuiList styles

--- a/src/login/main.css
+++ b/src/login/main.css
@@ -17,6 +17,7 @@
   --kc-page-title-color: #e3e3e3;
   --kc-page-content-color: #e3e3e3;
   --kc-box-background: #181818;
+  --kc-list-background: #202020;
 }
 
 /* Load fonts from assets */
