--- a/src/login/main.css
+++ b/src/login/main.css
@@ -1,6 +1,8 @@
 :root {
   /* Primary color hook (used optionally by your CSS); change here or via MUI theme */
   --kc-primary: #219b00;
+  --kc-disbaled: #6b6b6b;
+  --kc-disbaled-1: #3f3f3f;
   --kc-inactive: #8e918f;
   --kc-hover: #ffffff;
   --kc-space-05: 0.125rem;
