--- a/src/login/main.css
+++ b/src/login/main.css
@@ -387,3 +387,32 @@ a:hover {
     gap: var(--kc-space-2);
   }
 }
+
+/* Mobile display remember me and forgot password */
+@media (max-width: 767px) {
+    .kcFormSettingClass {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: var(--kc-space-2);
+        width: 100%;
+    }
+
+    /* Forgot Password */
+    #kc-form-options {
+        order: 0;
+        margin: 0;
+    }
+
+    /* Remember Me Checkbox + Label inline */
+    .kcFormOptionsWrapperClass {
+        order: 1;
+        display: flex !important;
+        flex-direction: row !important;
+        align-items: center;
+        gap: 0.5rem;
+    }
+}
+
+
